--- a/Clover v2.9.1/Clover v2.9.1/codecanyon-25737452-clover-realtime-messaging-audio-video-conferencing-web-app-nodejs-react-webrtc-socketio/frontend/src/features/Panel/Panel.sass
+++ b/Clover v2.9.1/Clover v2.9.1/codecanyon-25737452-clover-realtime-messaging-audio-video-conferencing-web-app-nodejs-react-webrtc-socketio/frontend/src/features/Panel/Panel.sass
@@ -1,10 +1,10 @@
 .panel
   height: 100%
   flex-grow: 1
-  border-right: 1px solid rgba(218, 220, 224, 0.5)
+  border-right: 1px solid rgba(0, 113, 255, 0.5) // soft blue border
   .notice
     font-size: 12px
-    color: #666
+    color: #cce0ff       // light blue text
     text-align: center
     padding: 18px
   .rooms
@@ -27,10 +27,10 @@
     width: 100%
 
 .theme.light .panel
-  background: #fff
+  background: #cce0ff      // light blue background for light theme
 
 .theme.dark .panel
-  background: #303841
+  background: #1e70ff      // darker blue for dark theme
 
 .active
-  color: #da7d02 !important
+  color: #0d4bb3 !important // strong blue for active elements
